#feature/alpha_kapil - Changed DeployOrderTest.java for Junit version